<resources>
    <string name="app_name">GalonHub</string>
    <string name="simbollokasibiru">Simbol Lokasi</string>
    <string name="buttonkembali">Kembali</string>
    <string name="logogalonhub">Logo GalonHub</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="fotoprofil">Foto Profil</string>
    <string name="nama">Kobo Kanaeru</string>
    <string name="nomorhp">(+62 810 2719 1202)</string>
    <string name="lokasi">Akihabara 1291 Block 1, Tokyo, Jepang, +17219HT 16218</string>
    <string name="ceklisbiru">Ceklis Biru</string>
    <string name="ceklisabuabu">Ceklis Abu Abu</string>
    <string name="aturtanggal">Kalender</string>
    <string name="namauser">Kobo Kanaeru</string>
    <string name="keluar">Keluar</string>
    <string name="statusmember">Member Gold</string>
    <string name="saldo_profil">Saldo</string>
    <string name="point_profil">Point Saya</string>
    <string name="jumlahsaldoprofil">Rp 80.000,00</string>
    <string name="jumlahpointprofil">1.000</string>
    <string name="biodatauser">Biodata Saya</string>
    <string name="ubahpassword">Ubah Kata Sandi</string>
    <string name="topup">Top Up</string>
    <string name="vouchersaya">Voucher Saya</string>
    <string name="historypemesanan">History Pemesanan</string>
    <string name="tentangkami">Tentang Kami</string>
    <string name="hubungikami">Hubungi Kami</string>
    <string name="btnprosespemesanan">Proses Pemesanan</string>
    <string name="mappesananselesai">Gambar Map</string>
    <string name="selamatuserps">Selamat, Kobo!</string>
    <string name="deskripsi1ps">Pesanan kamu sudah sampai tujuan dalam waktu 6 menit saja. Dan berhasil mendapatkan 10 point</string>
    <string name="banyakpoinps">10 poin</string>
    <string name="btnkembalikemenuawalps">Kembali ke Menu Awal</string>
    <string name="logopesananselesai">Pesanan Selesai</string>
    <string name="cari_homepage">Cari</string>
    <string name="halouser_homepage">Halo, Kobo!</string>
    <string name="welcome_homepage">Selamat datang, di Galon Hub!</string>
    <string name="deskripsi1_homepage">Temukan kemudahan pemesanan air</string>
    <string name="deskripsi2_homepage">galon terdekat dengan beberapa</string>
    <string name="deskripsi3_homepage">sentuhan dilayar ponsel Anda.</string>
    <string name="layanan_homepage">Layanan yang Tersedia di Kawasan Anda</string>
    <string name="namadaerah_homepage">Tokyo, Jepang</string>
    <string name="pickup_homepage">PESAN</string>
    <string name="wawasan_homepage">WAWASAN</string>
    <string name="aktivitaspemesanan_homepage">Aktifitas Pemesanan</string>
    <string name="namamitra_homepage">Yaya Water - </string>
    <string name="daerahmitra_homepage">Akihabara, Tokyo</string>
    <string name="tanggalwaktu_homepage">25 Oktober 2023, 10.23</string>
    <string name="harga_homepage">Rp 50.000,00</string>
    <string name="poin">+20 poin</string>
    <string name="status">Dalam Perjalanan</string>
    <string name="gambar_homepage">Gambar Homepage</string>
    <string name="pengaturan_homepage">Gambar Pengaturan</string>
    <string name="logo_homepage">Gambar Logo</string>
    <string name="foto_homepage">Foto Profil</string>
    <string name="simbollokasi_homepage">Simbol Lokasi</string>
    <string name="gambarorder_homepage">Gambar Order</string>
    <string name="gambarwawasan_homepage">Gambar Wawasan</string>
    <string name="welcome_login">Selamat Datang!</string>
    <string name="deskripsi1_login">Segera Nikmati Layanan Isi Ulang Air Mineral</string>
    <string name="deskripsi2_login">Langsung dari Ponselmu di Galon Hub!</string>
    <string name="inputform1_login">Nama Pengguna, Email dan Nomor HP</string>
    <string name="inputform2_login">Kata Sandi</string>
    <string name="forget_login">Lupa Kata Sandi?</string>
    <string name="buttonmasuk_login">Masuk</string>
    <string name="masukdengan_login">Masuk Dengan</string>
    <string name="belumbuatakun_login">Belum buat akun?</string>
    <string name="daftar_login">Daftar disini</string>
    <string name="logofb_login">Logo Facebook</string>
    <string name="logogoogle_login">Logo Google</string>
    <string name="logoapple_login">Logo Apple</string>
    <string name="hiasan2_login">Hiasan</string>
    <string name="daftar_register">Buat Akun</string>
    <string name="deskripsi1_register">Ayo, bergabung dengan kami! Dapatkan</string>
    <string name="deskripsi2_register">Layanan Isi Ulang Air Mineral Langsung dari</string>
    <string name="deskripsi3_register">Ponselmu di Galon Hub</string>
    <string name="email_register">Email</string>
    <string name="password_register">Kata Sandi Baru</string>
    <string name="konfirpassword_register">Konfirmasi Kata Sandi</string>
    <string name="simbolbintang_register">*</string>
    <string name="deskripsi4_register">Dengan menekan tombol</string>
    <string name="daftarakun_register">Daftar Akun</string>
    <string name="deskripsi5_register">, anda setuju</string>
    <string name="deskripsi6_register">dengan syarat dan ketentuan yang berlaku</string>
    <string name="buttondaftar_register">Daftar Akun</string>
    <string name="masukdengan_register">Masuk Dengan</string>
    <string name="sudahpunyaakun_register">Sudah punya akun?</string>
    <string name="masukdisini_register">Masuk disini</string>
    <string name="hiasankiri_register">Hiasan</string>
    <string name="hiasankanan_register">Hiasan</string>
    <string name="logofb_register">Logo Facebook</string>
    <string name="logogoogle_register">Logo Google</string>
    <string name="logoapple_register">Logo Apple</string>
    <string name="buttonpesanan_dp">Detail Pesanan</string>
    <string name="deskripsi1_dp">Berapa banyak galon yang ingin kamu isi ulang?</string>
    <string name="deskripsi2_dp">Jumlah Galon</string>
    <string name="orderan1_dp">Isi Ulang Air Aqua</string>
    <string name="keterangan1_dp">Persediaan Banyak</string>
    <string name="harga1_dp">Rp 14.000</string>
    <string name="orderan2_dp">Isi Ulang Air Biasa</string>
    <string name="keterangan2_dp">Persediaan Sedikit</string>
    <string name="harga2_dp">Rp 7.000</string>
    <string name="orderan3_dp">Galon Aqua + isi</string>
    <string name="harga3_dp">Rp 40.000</string>
    <string name="buttonkonfirmasi_dp">Konfirmasi Pesanan</string>
    <string name="jumlah1_dp">3</string>
    <string name="jumlah2_dp">2</string>
    <string name="jumlah3_dp">1</string>
    <string name="jumlah4_dp">0</string>
    <string name="minus_dp">-</string>
    <string name="plus_dp">+</string>
    <string name="pengaturan_dp">Pengaturan</string>
    <string name="logo_dp">Logo</string>
    <string name="fotoprofil_dp">Foto Profil</string>
    <string name="airaqua_dp">Air Aqua</string>
    <string name="airbiasa_dp">Gambar Air Biasa</string>
    <string name="galonaqua_dp">Gambar Galon Aqua + Isi</string>
    <string name="lupapassword_lp">Lupa Kata Sandi?</string>
    <string name="inputemail_lp">Masukkan Alamat Email</string>
    <string name="deskripsi_lp">Kami akan mengirimkan pesan kepada Anda untuk menetapkan atau mereset kata sandi baru Anda.</string>
    <string name="buttonkirim_lp">Kirim</string>
    <string name="mitraterdekat_mt">Mitra Terdekat di Lokasi Anda</string>
    <string name="ubah_mt">Ubah</string>
    <string name="galonro_mt">Galon RO</string>
    <string name="yayawater_mt">Yaya Water</string>
    <string name="aliencro_mt">Alien RO</string>
    <string name="depotfitext_mt">Depot Fitex</string>
    <string name="jarak1_mt">0,3 KM</string>
    <string name="jarak2_mt">0,8 KM</string>
    <string name="jarak3_mt">1 KM</string>
    <string name="jarak4_mt">5 KM</string>
    <string name="alamat1_mt">Alamat : 26179 Akihabara, Tokyo, Jepang</string>
    <string name="alamat2_mt">Alamat : 102920 Akihabara, Tokyo, Jepang</string>
    <string name="alamat3_mt">Alamat :468+BT Konoha, Tokyo, Jepang</string>
    <string name="alamat4_mt">Alamat : 11292 Harajuku, Tokyo, Jepang</string>
    <string name="nomorhp1_mt">Nomor HP : 08127028390</string>
    <string name="nomorhp2_mt">Nomor HP : 08261821912</string>
    <string name="nomorhp3_mt">Nomor HP : 081269393278</string>
    <string name="nomorhp4_mt">Nomor HP : 085888812191</string>
    <string name="keteranganwaktu_mt">(Buka 24 Jam)</string>
    <string name="pembayaran_checkout">Pembayaran</string>
    <string name="detailpesanan_checkout">Detail Pesanan</string>
    <string name="airaqua_checkout">1. Air Aqua</string>
    <string name="airbiasa_checkout">2. Air Biasa</string>
    <string name="harga1_checkout">Rp 28.000</string>
    <string name="subtotal_checkout">SubTotal   =</string>
    <string name="harga2_checkout">Rp 35.000</string>
    <string name="kalidua_checkout">x 2</string>
    <string name="kalisatu_checkout">x 1</string>
    <string name="jadwal_checkout">Jadwal Pengiriman</string>
    <string name="kirimsekarang_checkout">Kirim Sekarang (10 Menit)</string>
    <string name="aturjadwal_checkout">Atur Jadwal</string>
    <string name="metodepembayaran_checkout">Metode Pembayaran</string>
    <string name="saldo_checkout">Saldo (Rp 80.000,00)</string>
    <string name="tfbank_checkout">Transfer Bank</string>
    <string name="promo">PromoHaus1</string>
    <string name="remove_checkout">Remove</string>
    <string name="ongkir_checkout">Ongkir : Rp 2.000</string>
    <string name="pesansekarang_checkout">Pesan Sekarang</string>
    <string name="subtotal2_checkout">Subtotal</string>
    <string name="ongkir2_checkout">Ongkir</string>
    <string name="admin_checkout">Admin</string>
    <string name="voucher_checkout">Kode Voucher</string>
    <string name="total_checkout">Total</string>
    <string name="hargasubtotal_checkout">Rp 35.000,00</string>
    <string name="hargaongkir_checkout">Rp 2.000,00</string>
    <string name="hargaadmin_checkout">Rp 1.000,00</string>
    <string name="hargatotal_checkout">Rp 38.000,00</string>
    <string name="hidrasi">HIDRASI</string>
    <string name="insight">INSIGHT</string>
    <string name="kesehatan">KESEHATAN</string>
    <string name="kesehatantxt">Apa saja manfaat minum mineral setiap hari?</string>
    <string name="kesehatantxt2">Apakah air mineral boleh diminum setiap hari?</string>
    <string name="kesehatantxt3">Apakah air mineral itu bagus?</string>
    <string name="kesehatantxt4">Beda manfaat air mineral dengan air putih biasa</string>
    <string name="more">Lihat Selengkapnya</string>
    <string name="judulHidrasi">Biasakan dirimu untuk minum air</string>
    <string name="txtHidrasi">Menciptakan kebiasaan agar minum air teratur setiap harinya tidak bisa
        terjadi begitu saja. Kamu perlu memaksa diri kamu untuk minum air di sela-sela aktivitasmu.
        Untuk langkah awal, kamu bisa pasang alarm pengingat minum di ponselmu di jam-jam tertentu.
    </string>
    <string name="judulInsight">Kualitas air yang konsisten</string>
    <string name="txtInsight">Kami tersedia di seluruh Indonesia dan menjadi Top 3. Itu membuktikan bahwa
        kualitas air kami memiliki standar yang konsisten.
    </string>
    <string name="subjudulInsight">Setiap tetes di setiap botol air sudah melalui 12 proses kualitas yang
        ketat
    </string>
    <string name="txtInsight2">Itulah cara kami memastikan GalonHub memenuhi standar kualitas yang tinggi
        dan menghasilkan rasa air yang murni.
    </string>
    <string name="moreInsight">Lihat Semua Artikel</string>
    <string name="subjudulInsight2">Lengkapi Kebutuhan Pencernaan Kamu Dengan Air Mineral\n\n</string>
    <string name="prosesDelivery">Proses Pemesanan</string>
    <string name="kurirDelivery">Kurir Menuju Alamatmu</string>
    <string name="estimasiDelivery">( Sampai lokasi dalam waktu 6 menit )</string>
    <string name="alamatDelivery">Akihabara 1291 Block 1, Tokyo, Jepang, +17219HT 16218</string>
    <string name="menu">menu</string>
</resources>