<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- NAVBAR -->
    <ImageView
        android:contentDescription="@string/pengaturan_homepage"
        android:id="@+id/imageView"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/buttonmenu"
        />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="69dp"
        android:layout_height="69dp"
        android:contentDescription="@string/logogalonhub"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007"
        app:srcCompat="@drawable/logogalonhub" />
    <ImageView
        android:contentDescription="@string/foto_homepage"
        android:id="@+id/imageView9"
        android:layout_width="45dp"
        android:layout_height="46dp"
        android:layout_marginStart="110dp"
        android:layout_marginBottom="27dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/fotoprofil"
        />

    <!-- TEXT -->

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="641dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/outfit_bold"
            android:text="@string/judulInsight"
            android:textAppearance="@style/judulInsight"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/outfit_light"
            android:text="@string/txtInsight"
            android:textAppearance="@style/txtInsight" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/outfit_bold"
            android:text="@string/subjudulInsight"
            android:textAppearance="@style/subjudulInsight" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/outfit_light"
            android:text="@string/txtInsight2"
            android:textAppearance="@style/textInsight2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/outfit_bold"
            android:text="@string/subjudulInsight2"
            android:textAppearance="@style/subjudulInsight2" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
