<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- NAVBAR -->
    <ImageView
        android:contentDescription="@string/pengaturan_homepage"
        android:id="@+id/imageView"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/buttonmenu"
        />
    <ImageView
        android:contentDescription="@string/logogalonhub"
        android:id="@+id/imageView2"
        android:layout_width="69dp"
        android:layout_height="69dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007"
        app:srcCompat="@drawable/logogalonhub"
        />
    <ImageView
        android:contentDescription="@string/foto_homepage"
        android:id="@+id/imageView9"
        android:layout_width="45dp"
        android:layout_height="46dp"
        android:layout_marginStart="110dp"
        android:layout_marginBottom="27dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/fotoprofil"
        />

    <!-- TEXT -->
    <TextView
        android:id="@+id/textView1"
        android:layout_width="342dp"
        android:layout_height="77dp"
        android:layout_marginEnd="44dp"
        android:fontFamily="@font/outfit_bold"
        android:text="@string/judulHidrasi"
        android:textAppearance="@style/judulHidrasi"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.064" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="368dp"
        android:layout_height="194dp"
        android:layout_marginEnd="18dp"
        android:fontFamily="@font/outfit_light"
        android:text="@string/txtHidrasi"
        android:textAppearance="@style/txtHidrasi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintVertical_bias="0.019" />

    <!-- IMAGE -->
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="399dp"
        android:layout_height="235dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.366"
        app:srcCompat="@drawable/ftohidrasi" />
</androidx.constraintlayout.widget.ConstraintLayout>
