<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PesananSelesaiActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/map2">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_container_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_panel_white"
            android:name="com.example.galonhub.HeaderFragment"
            />

        <Button
            android:id="@+id/btnprosespemesanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/lightblue"
            android:fontFamily="@font/outfit_bold"
            android:text="@string/btnprosespemesanan"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="48dp"
                android:background="@drawable/rounded_panel_white"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/selamatuserps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/outfit_bold"
                    android:text="@string/selamatuserps"
                    android:textColor="@color/blue"
                    android:textSize="24sp"
                    tools:ignore="TextContrastCheck" />

                <ImageView
                    android:id="@+id/gambarpesanananselesaips"
                    android:layout_width="124dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/logopesananselesai"
                    app:srcCompat="@drawable/pesananselesai" />

                <TextView
                    android:id="@+id/deskripsipesananselesai"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/outfit_medium"
                    android:gravity="center"
                    android:text="@string/deskripsi1ps"
                    android:textSize="16sp"
                    tools:ignore="TextSizeCheck" />

                <Button
                    android:id="@+id/back"
                    android:layout_width="match_parent"
                    android:layout_height="51dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/blue"
                    android:fontFamily="@font/outfit_bold"
                    android:text="@string/btnkembalikemenuawalps"
                    android:textSize="12sp"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>