<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- NAVBAR -->
    <ImageView
        android:contentDescription="@string/pengaturan_homepage"
        android:id="@+id/imageView"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/buttonmenu"
        />

    <ImageView
        android:contentDescription="@string/logogalonhub"
        android:id="@+id/imageView2"
        android:layout_width="69dp"
        android:layout_height="69dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007"
        app:srcCompat="@drawable/logogalonhub"
        />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="38dp"
        android:layout_height="46dp"
        android:layout_marginStart="110dp"
        android:layout_marginBottom="27dp"
        android:contentDescription="@string/foto_homepage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/user" />
    <!-- END NAVBAR -->

    <View
        android:id="@+id/view1"
        android:layout_width="339dp"
        android:layout_height="36dp"
        android:layout_marginBottom="604dp"
        android:background="@drawable/rectangle10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prosesDelivery"
        android:textAppearance="@style/prosesDelivery"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view1"
        app:layout_constraintEnd_toEndOf="@+id/view1"
        app:layout_constraintStart_toStartOf="@+id/view1"
        app:layout_constraintTop_toTopOf="@+id/view1"/>

    <ImageView
        android:id="@+id/imageview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/view1"
        app:layout_constraintEnd_toEndOf="@+id/view1"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="@+id/view1"
        app:layout_constraintTop_toTopOf="@+id/view1"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/back"/>

    <View
        android:id="@+id/view2"
        android:layout_width="419dp"
        android:layout_height="559dp"
        android:layout_marginTop="172dp"
        android:background="@drawable/map3"
        app:layout_constraintBottom_toBottomOf="view1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/view3"
        android:layout_width="289dp"
        android:layout_height="110dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/rectangle8"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/view2" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="217dp"
        android:layout_height="22dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/kurirDelivery"
        android:textAppearance="@style/kurirDelivery"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <ImageView
        android:id="@+id/miniloc"
        android:layout_width="34dp"
        android:layout_height="29dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3"
        app:layout_constraintVertical_bias="0.148"
        app:srcCompat="@drawable/miniloc" />

    <TextView
        android:id="@+id/txt3"
        android:layout_width="238dp"
        android:layout_height="19dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:text="@string/estimasiDelivery"
        android:textAppearance="@style/estimasiDelivery"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <TextView
        android:id="@+id/txt4"
        android:layout_width="236dp"
        android:layout_height="36dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="58dp"
        android:text="@string/alamatDelivery"
        android:textAppearance="@style/alamatDelivery"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <ImageView
        android:id="@+id/galon"
        android:layout_width="82dp"
        android:layout_height="79dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:srcCompat="@drawable/galon" />

    <ImageView
        android:id="@+id/estimasi"
        android:layout_width="114dp"
        android:layout_height="54dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="156dp"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:srcCompat="@drawable/estimasi" />

    <ImageView
        android:id="@+id/estimasi2"
        android:layout_width="71dp"
        android:layout_height="52dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="124dp"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.383"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:srcCompat="@drawable/galonhub4" />

    <ImageView
        android:id="@+id/customer"
        android:layout_width="104dp"
        android:layout_height="64dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="176dp"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:srcCompat="@drawable/customer" />

</androidx.constraintlayout.widget.ConstraintLayout>